objects/VisitOps__Metadata_CSVHeaderForAttendees__mdt.object
<CustomObject>
    <fields>
        <fullName>VisitOps__API_Name__c</fullName>
        <label>API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Additional_Details__c</fullName>
        <label>Additional Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__IsEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__IsMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Order_No__c</fullName>
        <label>Order No</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Restrict_Picklist_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restrict Picklist Value</label>
        <type>Checkbox</type>
    </fields>
    <label>Metadata_CSVHeaderForAttendees</label>
    <pluralLabel>Metadata_CSVHeaderForAttendees</pluralLabel>
</CustomObject>